@@ -1,5 +1,5 @@
 /*
- * $Id: ttkStubInit.c,v 1.3 2010/02/05 17:42:21 nijtmans Exp $
+ * $Id: ttkStubInit.c,v 1.4 2010/02/05 21:33:14 jenglish Exp $
  *
  * This file is (mostly) automatically generated from ttk.decls.
  * It is compiled and linked in with the ttk package proper.
@@ -8,11 +8,11 @@
 #include "tk.h"
 #include "ttkTheme.h"
 
-MODULE_SCOPE const TtkStubs ttkConstStubs;
+MODULE_SCOPE const TtkStubs ttkStubs;
 
 /* !BEGIN!: Do not edit below this line. */
 
-const TtkStubs ttkConstStubs = {
+const TtkStubs ttkStubs = {
     TCL_STUB_MAGIC,
     TTK_STUBS_EPOCH,
     TTK_STUBS_REVISION,
